--- a/admin/admin.html
+++ b/admin/admin.html
@@ -32,7 +32,10 @@
 <body>
     <header>
         <div class="headerTop">
-            <a href="../index.html" class="headerTop__logo">MSB</a>
+            <div class="headerTop__logotip" itemscope itemtype="http://schema.org/ImageObject">
+                <img   src="../iconPWA/logo96x96.svg" itemprop="contentUrl" />
+            </div>
+            <a href="../index.html" class="headerTop__logo">MSB<span>container</span></a>
             <div class="headerTop__search">
                 <input type="text" placeholder="Поиск заказов" maxlength="30" class="search">
                 <div class="search__media"><img src="../header/search.svg" alt="поиск"></div>
