--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="white">
-    <meta name="keywords" content="msb, msb-container, бытовка, магазин бытовок, контейнер, купить контейнер, купить бытовку, строительный вагончик, купить строительный вагончик, MSB, мсб контейнер, container, аренда бытовок, аренда контейнеров, аренда строительных вагончиков, вагончик"> 
+    <meta name="keywords" content="msb, msb-container, бытовка, магазин бытовок, контейнер, купить контейнер, купить бытовку, строительный вагончик, купить строительный вагончик, MSB, мсб контейнер, container, аренда бытовок, аренда контейнеров, аренда строительных вагончиков, вагончик, модульное здания, каркасные здания, блог контеры, Транспак, Здание из сендвич панелей, Быстровозводимые здания,  Штаб строительства; душевой контейнер, Туалетный контейнер, Аренда жилого модуля, Аренда строительной бытовки Ярославль, Аренда штаба строительства, Ярославль бытовки. Бытовка 76, Аренда модульного здания ярославль,"> 
      <!-- придумать описание страницы -->
     <meta name="description" content="придумать описание страницы">
     <meta name="Author" content="Povasin Kirill"> 
@@ -28,6 +28,7 @@
     <link rel="manifest" href="./manifest.json">
     <link rel="stylesheet" href="./header/header.css" media="screen and (min-width:320px)">
     <link rel="stylesheet" href="./cubinsForSomeThing.css">
+    <meta itemprop="identifier" content="90782826">
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript" >
         (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -40,7 +41,8 @@
             clickmap:true,
             trackLinks:true,
             accurateTrackBounce:true,
-            webvisor:true
+            webvisor:true,
+            ecommerce:"dataLayer"
         });
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/90782826" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
@@ -58,7 +60,10 @@
     </div>
     <header>
         <div class="headerTop">
-            <a href="./index.html" class="headerTop__logo">MSB</a>
+            <div class="headerTop__logotip" itemscope itemtype="http://schema.org/ImageObject">
+                <img   src="./iconPWA/logo96x96.svg" itemprop="contentUrl" />
+              </div>
+            <a href="./index.html" class="headerTop__logo">MSB<span>container</span></a>
             <div class="headerTop__search">
                 <input type="text" placeholder="Поиск" maxlength="30" class="search">
                 <img decoding="async" src="./header/search.svg" alt="поиск">
@@ -325,7 +330,7 @@
             </div>
             <div class="basement__content">
                 <div class="d-col">
-                    <a href="./index.html" class="basement__logo">MSB</a>
+                    <a href="../index.html" class="basement__logo">MSB <span>container</span></a>
                     <div class="block">
                         <a href="#" class="prava">2022 все права защищены</a>
                         <a href="#" class="prava">пользовательское соглашение</a>
