--- a/katalog/katalog.html
+++ b/katalog/katalog.html
@@ -53,7 +53,10 @@
     </div>
     <header>
         <div class="headerTop">
-            <a href="../index.html" class="headerTop__logo">MSB</a>
+            <div class="headerTop__logotip" itemscope itemtype="http://schema.org/ImageObject">
+                <img   src="../iconPWA/logo96x96.svg" itemprop="contentUrl" />
+            </div>
+            <a href="../index.html" class="headerTop__logo">MSB<span>container</span></a>
             <div class="headerTop__search">
                 <input type="text" placeholder="Поиск" maxlength="30" class="search">
                 <img src="../header/search.svg" alt="поиск">
@@ -226,7 +229,7 @@
             </div>
             <div class="basement__content">
                 <div class="d-col">
-                    <a href="./index.html" class="basement__logo">MSB</a>
+                    <a href="../index.html" class="basement__logo">MSB <span>container</span></a>
                     <div class="block">
                         <a href="#" class="prava">2022 все права защищены</a>
                         <a href="#" class="prava">пользовательское соглашение</a>
@@ -258,10 +261,10 @@
             </div>
         </div>
     </footer>
-    <script async src="../main.js"></script>
-    <script src="../cubinsMoreMass.js"></script>
-    <script src="../katalogMass.js"></script>
-    <script src="./katalog.js"></script>
-    <script src="../mainInnerHtml.js"></script>
+    <script  type="module" src="../main.js"></script>
+    <script   type="module" src="../cubinsMoreMass.js"></script>
+    <script  type="module" src="../katalogMass.js"></script>
+    <script type="module"  src="./katalog.js"></script>
+    <script   type="module" src="../mainInnerHtml.js"></script>
 </body>
 </html>
