--- a/services/services.html
+++ b/services/services.html
@@ -63,7 +63,10 @@
     </div>
     <header>
         <div class="headerTop">
-            <a href="../index.html" class="headerTop__logo">MSB</a>
+            <div class="headerTop__logotip" itemscope itemtype="http://schema.org/ImageObject">
+                <img   src="../iconPWA/logo96x96.svg" itemprop="contentUrl" />
+            </div>
+            <a href="../index.html" class="headerTop__logo">MSB<span>container</span></a>
             <div class="headerTop__search">
                 <input type="text" placeholder="Поиск" maxlength="30" class="search">
                 <img src="../header/search.svg" alt="поиск">
@@ -151,7 +154,7 @@
                         <div class="star">★★★★★</div>
                         <p>перевозка бытовок и контейнеров</p>
                         <div class="services__contantPrice">
-                            <a href="../transportation/transportation.html" class="more">подробнее</a>
+                            <a href="#" class="more">подробнее</a>
                             <p>От 8000₽</p>
                         </div>
                     </div>
@@ -233,7 +236,7 @@
             </div>
             <div class="basement__content">
                 <div class="d-col">
-                    <a href="./index.html" class="basement__logo">MSB</a>
+                    <a href="../index.html" class="basement__logo">MSB <span>container</span></a>
                     <div class="block">
                         <a href="#" class="prava">2022 все права защищены</a>
                         <a href="#" class="prava">пользовательское соглашение</a>
@@ -265,6 +268,6 @@
             </div>
         </div>
     </footer>
-    <script src="../main.js"></script>
+    <script  type="module" src="../main.js"></script>
 </body>
 </html>
