--- a/admin/admin.html
+++ b/admin/admin.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,7 +34,7 @@
     <header>
         <div class="headerTop">
             <div class="headerTop__logotip" itemscope itemtype="http://schema.org/ImageObject">
-                <img   src="../iconPWA/logo96x96.svg" itemprop="contentUrl" />
+                <img alt="логотип"   src="../iconPWA/logo96x96.svg" itemprop="contentUrl" />
             </div>
             <a href="../index.html" class="headerTop__logo">MSB<span>container</span></a>
             <div class="headerTop__search">
