--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -52,7 +53,7 @@
     <div class="search__modal">
         <div class="search__header">
             <input type="text" placeholder="Поиск" maxlength="30"  class="search">
-            <img decoding="async" src="./header/search.svg" alt="поиск">
+            <img decoding="async" alt="логотип" src="./header/search.svg" alt="поиск">
             <p class="search__close" >Отмена</p>
         </div>
         <div class="search__block">
