--- a/aboutUs/aboutUs.html
+++ b/aboutUs/aboutUs.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +16,7 @@
     <meta property="og:type" content="article">
     <meta property="og:title" content="MSB-Магазин бытовок">
      <!-- придумать описание страницы для соцсетей -->
-    <meta property="og:description" content="Описание страницы про META теги">
+    <meta property="og:description" content="Описание страницы ">
     <meta property="og:image" content="./MAINLOGO.png">
     <meta property="og:url" content="./index.html">
     <meta property="og:site_name" content="MSB-Магазин бытовок">
@@ -64,7 +65,7 @@
     <header>
         <div class="headerTop">
             <div class="headerTop__logotip" itemscope itemtype="http://schema.org/ImageObject">
-                <img   src="../iconPWA/logo96x96.svg" itemprop="contentUrl" />
+                <img alt="логотип"   src="../iconPWA/logo96x96.svg" itemprop="contentUrl" />
             </div>
             <a href="../index.html" class="headerTop__logo">MSB<span>container</span></a>
             <div class="headerTop__search">
